--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,6 +14,8 @@
         <script src="main.js"></script>
     </head>
     <body>
-        
+        <div class="wrapper">
+            <div id="pieChart"></div>
+        </div>
     </body>
 </html>
