--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,13 +9,14 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>    
         <script src="//code.highcharts.com/highcharts.js"></script>
         <script src="//code.highcharts.com/modules/exporting.js"></script>
+        <script src="//code.highcharts.com/modules/data.js"></script>
         <!-- fichier données et js -->
-        <script src="testcsv.csv"></script> 
+        <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="main.js"></script>
     </head>
     <body>
         <div class="wrapper">
-            <div id="pieChart"></div>
+            <div id="Container"></div>
         </div>
     </body>
 </html>
