--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,15 +8,13 @@
         <!--libs-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>    
         <script src="//code.highcharts.com/highcharts.js"></script>
+        <script src="//code.highcharts.com/modules/data.js"></script> 
         <script src="//code.highcharts.com/modules/exporting.js"></script>
-        <script src="//code.highcharts.com/modules/data.js"></script>
         <!-- fichier données et js -->
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="main.js"></script>
     </head>
     <body>
-        <div class="wrapper">
-            <div id="Container"></div>
-        </div>
+            <div id="container"></div>
     </body>
 </html>
