--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,15 @@
         <script src="main.js"></script>
     </head>
     <body>
+        <div id="Entete">
+            <img id="logo" src="images/logo.png" alt=""/>
+            <img id="logotram" src="images/logo_tram.png" alt=""/>
+        </div>
+        <form>
+            <label for="btnFileUpload" id="texteselection">Veuillez sélectionner le fichier .csv</label>
+            <input type="file" id="btnFileUpload"/>
+            <input type="button" id="boutonConf" value="Veuillez appuyer ici après la sélection de votre fichier"/>
             <div id="container"></div>
+        </form>
     </body>
 </html>
