--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
         <script src="//code.highcharts.com/highcharts.js"></script>
         <script src="//code.highcharts.com/modules/data.js"></script> 
         <script src="//code.highcharts.com/modules/exporting.js"></script>
+        <script src="js/libs/PapaParse/papaparse.min.js"></script>
         <!-- fichier données et js -->
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="main.js"></script>
@@ -21,7 +22,7 @@
         </div>
         <form>
             <label for="btnFileUpload" id="texteselection">Veuillez sélectionner le fichier .csv</label>
-            <input type="file" id="btnFileUpload"/>
+            <input type="file" id="btnFileUpload" accept=".csv"/>
             <input type="button" id="boutonConf" value="Veuillez appuyer ici après la sélection de votre fichier"/>
             <div id="container"></div>
         </form>
