--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,9 +29,10 @@
         </div>
         
         <form>
-            <label for="btnFileUpload" id="texteselection">Sélectionnez un fichier csv.</label>
-            <input type="file" id="btnFileUpload" accept=".csv"/>
-            <div id="container"></div>
+            <label for="csv" id="texteselection">Sélectionnez un fichier csv.</label>
+            <input type="file" id="csv" accept=".csv"/>
+            <div id="container">
+            </div>
         </form>
         
     </body>
