--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,13 +5,10 @@
         <title>Chocs Pantographes</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
         <!--libs-->
         <link href="js/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>   
         <script src="js/libs/bootstrap/js/bootstrap.min.js"></script>
-
-
         <script src="//code.highcharts.com/highcharts.js"></script>
         <script src="//code.highcharts.com/modules/data.js"></script> 
         <script src="//code.highcharts.com/modules/exporting.js"></script>
@@ -23,7 +20,11 @@
         <!-- fichier données, js, favicon -->
 
         <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="shortcut icon" type="image/png" sizes="32x32" href="images/icone.png"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+        <link rel="manifest" href="images/site.webmanifest">
+        
         <script src="main.js"></script>
     </head>
 
@@ -42,11 +43,11 @@
             </div>
 
             <ul class="nav nav-tabs nav-justified">
-                <li class="nav-item">
-                    <a href="#tab-courbe" class="nav-link  active" data-toggle="tab" >Courbe des mesures</a>
+                <li class="nav-item ">
+                    <a href="#tab-courbe" class="nav-link nav-tabs active" data-toggle="tab" >Courbe des mesures</a>
                 </li>
-                <li class="nav-item">
-                    <a href="#tab-carte" class="nav-link" data-toggle="tab" >Carte des chocs</a>
+                <li class="nav-item nav-tabs">
+                    <a href="#tab-carte" class="nav-link nav-tabs" data-toggle="tab" >Carte des chocs</a>
                 </li>
             </ul>
 
