--- a/public_html/index.html
+++ b/public_html/index.html
@@ -56,7 +56,7 @@
                     <div id="courbe"></div>
                 </div>
                 <div role="tabpanel" class="tab-pane col-md-12 text-center " id="tab-carte">
-                    <input type="button" class="btn btn-primary custom-btn" id="btnMarqueur" value="Ajouter les marqueurs des chocs détectés">
+                    <input type="button" class="btn btn-primary btnorange" id="btnToutMarqueur" value="Montrer tous les Chocs">
                     <div id="carte">
                     </div>
                 </div>
