--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@
         <script src="//code.highcharts.com/modules/data.js"></script>
         <script src="//code.highcharts.com/modules/exporting.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js" referrerpolicy="no-referrer"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
         <script src="js/libs/leaflet/leaflet.js"></script>
 
         <!-- fichier données, js, favicon -->
@@ -72,6 +72,7 @@
                                     <p id="nbrchoc"></p>
                                 </div>
                                 <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" id="boutonRecap" >Telecharger Récapitulatif</button>
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                 </div>
                             </div>
