--- a/public_html/index.html
+++ b/public_html/index.html
@@ -63,7 +63,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Informations complémentaires</h4>
+                                    <h4 class="modal-title ">Informations complémentaires</h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
@@ -72,8 +72,8 @@
                                     <p id="nbrchoc"></p>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" id="boutonRecap" >Telecharger Récapitulatif</button>
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-success mr-auto" id="boutonRecap" >Telecharger Récapitulatif</button>
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                                 </div>
                             </div>
 
